# saaga-mcp-server-cookie-cutter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CORRELATION_ID_FEATURE.md  DECORATOR_INTEGRATION_PLAN.md  DECORATOR_MIGRATION_GUIDE.md  DECORATOR_PATTERNS.md  IMPLEMENTATION_PLAN.md  JIRA_ISSUES_COMPLETE.md  JIRA_ISSUES_PHASE_5_6.md  LICENSE  LOGGING_DESTINATIONS_IMPLEMENTATION_GUIDE.md  README.md  RIPPLE_EFFECTS_ANALYSIS_PLAN.md  SETUP_ASSISTANT_PROMPT.md  cookiecutter.json  jira-issues-phase1-2.md  phase3-4-jira-issues.md  pyproject.toml  requirements.txt  start-issue-analysis.md  test_cookiecutter.py  test_correlation_feature.sh  test_correlation_id_client.py  test_correlation_simple.py  test_decorator_functionality.py  test_lifecycle.py  test_uv_migration.sh  validate_template.py
demo_mcp_server/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
demo_mcp_server/demo_mcp_server/: __init__.py  __main__.py  config.py
demo_mcp_server/demo_mcp_server/server/: app.py
demo_mcp_server/tests/: __init__.py
example_server/: .coveragerc  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  DEVELOPER_GUIDE.md  LICENSE  README.md  SAAGA_INTEGRATION_CONFIG.md  WORKING_WITH_SAAGA_PROMPT.md  mcp.combined.json  mcp.http.json  mcp.integration_test.json  mcp.stdio.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_correlation_id_integration.py  test_mcp_integration.ps1  test_mcp_integration.sh  test_oauth_error_handling.py  test_oauth_private_repo.py  test_unified_logging.py
example_server/.reference/: README.md  mcp-sdk-knowledge-base.md  saaga-mcp-integration.md
example_server/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  OAUTH_PASSTHROUGH.md  System_Info_Analyzer_Architecture.md  UNIFIED_LOGGING.md
example_server/example_mcp_server/: .ai-prompts.md  .gitignore  CHANGELOG.md  README.md  pyproject.toml
example_server/example_server/: __init__.py  __main__.py  config.py  logging_config.py
example_server/test_asep40_server/: __init__.py  __main__.py  config.py  logging_config.py
example_server/tests/: README.md  __init__.py
final_mcp/: .coveragerc  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  mcp.combined.json  mcp.http.json  mcp.stdio.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_correlation_id_integration.py  test_mcp_integration.ps1  test_mcp_integration.sh  test_mcp_with_claude.sh  test_oauth_backend.py  test_oauth_backend_simple.py  test_oauth_backend_with_real_http.py  test_unified_logging.py
final_mcp/.reference/: mcp-beginners-guide.md  mcp-quick-reference.md  mcp-sdk-knowledge-base.md
final_mcp/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  OAUTH_BACKEND.md  OAUTH_COMPARISON.md  UNIFIED_LOGGING.md
final_mcp/final_mcp/: __init__.py  __main__.py  config.py  logging_config.py
final_mcp/tests/: README.md  __init__.py
generated_servers/test_integration_working/: .ai-prompts.md  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  README.md  mcp.integration_test.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_mcp_integration.ps1  test_mcp_integration.sh  test_mcp_with_claude.sh
generated_servers/test_mcp_integration/: .ai-prompts.md  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  README.md  pyproject.toml  test_mcp_integration.ps1  test_mcp_integration.sh  test_mcp_with_claude.ps1  update_deps.py
generated_servers/test_mcp_server/: .ai-prompts.md  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  LICENSE  README.md  mcp.integration_test.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_unified_logging.py
reference_test/: DEVELOPMENT.md  README.md  pyproject.toml  test_discovery.py  test_inspector.py  test_mcp_cli.py
reference_test/reference_test/: __init__.py  config.py  logging_config.py
sizzle_mcp_server/: .ai-prompts.md  .coveragerc  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  README.md  mcp.integration_test.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_correlation_id_integration.py  test_mcp_integration.ps1  test_mcp_integration.sh  test_unified_logging.py
sizzle_mcp_server/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
sizzle_mcp_server/sizzle_mcp_server/: __init__.py  __main__.py  config.py  logging_config.py
sizzle_mcp_server/tests/: README.md  __init__.py
test_output/test_bazel/: .ai-prompts.md  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  Makefile  README.md  pyproject.toml  refresh_requirements_txt.sh  requirements.txt  requirements_linux_arm64.txt
ui_test_project/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ui_test_project/tests/: __init__.py
ui_test_project/ui_test_project/: __init__.py  __main__.py  config.py
{{cookiecutter.project_slug}}/: .ai-prompts.md  .gitignore  .pre-commit-config.yaml.j2  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  DEVELOPER_GUIDE.md  Makefile  README.md  WORKING_WITH_SAAGA_PROMPT.md  config.yaml.example  config.yaml.j2  pyproject.toml  refresh_requirements_txt.sh  run_integration_tests.py  test_correlation_id_integration.py  test_integration_quick.py  test_mcp_integration.ps1  test_mcp_integration.sh  test_mcp_with_claude.ps1  test_mcp_with_claude.sh  test_oauth_backend.py  test_oauth_backend_simple.py  test_oauth_backend_with_real_http.py  test_oauth_error_handling.py  test_oauth_private_repo.py  test_unified_logging.py
{{cookiecutter.project_slug}}/.reference/: README.md  mcp-compatibility-critical.md  mcp-quick-reference.md  mcp-version-tracker.md
{{cookiecutter.project_slug}}/docs/: CONFIGURATION.md  DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  OAUTH_BACKEND.md  OAUTH_COMPARISON.md  OAUTH_PASSTHROUGH.md  UNIFIED_LOGGING.md
{{cookiecutter.project_slug}}/tests/: README.md  __init__.py  conftest.py  test_decorators.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  config.py  logging_config.py
(+416 files in other folders)
