load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "{{ cookiecutter.project_slug }}_bin",
    srcs = ["{{ cookiecutter.project_slug }}/__main__.py"],
    imports = ["{{ cookiecutter.project_slug }}"],
    main = "{{ cookiecutter.project_slug }}/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":{{ cookiecutter.project_slug }}_lib"],
)

py_library(
    name = "{{ cookiecutter.project_slug }}_lib",
    srcs = glob(["{{ cookiecutter.project_slug }}/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@mcp_{{ cookiecutter.project_slug }}//mcp",
        "@mcp_{{ cookiecutter.project_slug }}//pydantic",
        "@mcp_{{ cookiecutter.project_slug }}//pyyaml",
        "@mcp_{{ cookiecutter.project_slug }}//platformdirs",
        "@mcp_{{ cookiecutter.project_slug }}//pydantic_settings",
        "@mcp_{{ cookiecutter.project_slug }}//loguru",
        "@mcp_{{ cookiecutter.project_slug }}//streamlit",
        "@mcp_{{ cookiecutter.project_slug }}//pandas",
        "@mcp_{{ cookiecutter.project_slug }}//plotly",
        # Add additional dependencies based on your requirements
    ],
)