load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "test_integration_working_bin",
    srcs = ["test_integration_working/__main__.py"],
    imports = ["test_integration_working"],
    main = "test_integration_working/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":test_integration_working_lib"],
)

py_library(
    name = "test_integration_working_lib",
    srcs = glob(["test_integration_working/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@mcp_test_integration_working//mcp",
        "@mcp_test_integration_working//pydantic",
        "@mcp_test_integration_working//pyyaml",
        "@mcp_test_integration_working//platformdirs",
        "@mcp_test_integration_working//pydantic_settings",
        "@mcp_test_integration_working//loguru",
        "@mcp_test_integration_working//streamlit",
        "@mcp_test_integration_working//pandas",
        "@mcp_test_integration_working//plotly",
        # Add additional dependencies based on your requirements
    ],
)