load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "test_mcp_integration_bin",
    srcs = ["test_mcp_integration/__main__.py"],
    imports = ["test_mcp_integration"],
    main = "test_mcp_integration/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":test_mcp_integration_lib"],
)

py_library(
    name = "test_mcp_integration_lib",
    srcs = glob(["test_mcp_integration/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@mcp_test_mcp_integration//mcp",
        "@mcp_test_mcp_integration//pydantic",
        "@mcp_test_mcp_integration//pyyaml",
        "@mcp_test_mcp_integration//platformdirs",
        "@mcp_test_mcp_integration//pydantic_settings",
        "@mcp_test_mcp_integration//loguru",
        
        # Add additional dependencies based on your requirements
    ],
)