load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "test_bazel",
    srcs = ["test_bazel/__main__.py"],
    imports = ["test_bazel"],
    main = "test_bazel/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":test_bazel_lib"],
)

py_library(
    name = "test_bazel_lib",
    srcs = glob(["test_bazel/**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        # Core MCP dependencies
        "@mcp_pypi//mcp",
        "@mcp_pypi//anyio",
        "@mcp_pypi//starlette",
        "@mcp_pypi//uvicorn",
        "@mcp_pypi//click",
        
        # Utility dependencies
        "@mcp_pypi//platformdirs",
        "@mcp_pypi//loguru",
        "@mcp_pypi//pydantic",
        "@mcp_pypi//pyyaml",
        "@mcp_pypi//multipart",  # python-multipart
        
        # Admin UI dependencies
        "@mcp_pypi//streamlit",
        "@mcp_pypi//plotly",
        "@mcp_pypi//pandas",
    ],
)